# theRiverLethe

./: LICENSE  README.md  pyproject.toml
thelethe/: __init__.py  olympians.py  protogenois.py  titans.py
thelethe/architectures/: __init__.py
thelethe/architectures/protogenois/: __init__.py  cache_utils.py  configuration_utils.pyi  generation.pyi  modeling_layers.pyi  modeling_utils.py
thelethe/architectures/protogenois/models/llama/: __init__.py  modeling_llama.py
thelethe/architectures/protogenois/models/llama_mor/: modular_llama_mor.py  routing_llama_mor.py
thelethe/architectures/protogenois/models/mor/: README.md  requirements.txt
thelethe/architectures/protogenois/models/mor/conf/eval_fewshot/: 250926_pretrain_smollm-360m_rec2_middle_sequence_random_lr3e-3.yaml  250926_pretrain_smollm-360m_rec3_middle_sequence_random_lr3e-3.yaml
thelethe/architectures/protogenois/models/mor/conf/pretrain/: 250720_pretrain_smollm-360m_kv-share_rec3_middle_cycle_random_lr3e-3_mor_expert_linear_alpha_0.1_sigmoid_aux_loss_0.001.yaml  250720_pretrain_smollm-360m_rec3_middle_cycle_random_lr3e-3.yaml  250720_pretrain_smollm-360m_rec3_middle_cycle_random_lr3e-3_mor_expert_linear_alpha_0.1_sigmoid_aux_loss_0.001.yaml  250720_pretrain_smollm-360m_vanilla_lr3e-3.yaml  250926_pretrain_smollm-360m_rec2_middle_sequence_random_lr3e-3.yaml  250926_pretrain_smollm-360m_rec3_middle_sequence_random_lr3e-3.yaml
thelethe/architectures/protogenois/models/mor/lm_dataset/: language_modeling_dataset.py
thelethe/architectures/protogenois/models/mor/model/mor_model/: expert_choice_router.py
thelethe/architectures/protogenois/models/mor/notebooks/: 250727_get_mor_routing_decision.ipynb
thelethe/architectures/protogenois/models/mor_llama/: expert_choice_router.py
thelethe/architectures/protogenois/models/ttt_linear/: __init__.py  configuration_ttt_linear.py  modeling_ttt_linear.py  modular_ttt_linear.py
thelethe/architectures/protogenois/models/ttt_mlp/: __init__.py  configuration_ttt_mlp.py  modeling_ttt_mlp.py  modular_ttt_mlp.py
thelethe/architectures/protogenois/models/vit/: __init__.py  modeling_vit.py
thelethe/architectures/titans/: __init__.py  activations.py  configs.py  configuration_utils.py  integrations.py  modeling_outputs.py  modeling_rope_utils.py  modeling_utils.py
thelethe/architectures/titans/models/: __init__.py
thelethe/architectures/titans/models/atlas/: __init__.py  configuration_atlas.py  modeling_atlas.py
thelethe/architectures/titans/models/cronos/: __init__.py  configuration_cronos.py  modeling_cronos.py
thelethe/architectures/titans/models/origin/: __init__.py  configuration_origin.py  modeling_origin.py  modular_origin.py
thelethe/architectures/titans/utils/: __init__.py  scan_ops.py
thelethe/configuration/: __init__.py  config.py
thelethe/integrations/: flash_linear_attention.py
thelethe/ops/: __init__.py  asso_scan.py  normal_scan.py  self_retention.py
thelethe/utils/: converter.py  import_utils.py  logger.py  moduling_utils.py  scan_ops.py
