[build-system]
requires = ["flit_core>=3.4,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "thelethe"
version = "0.1.0"
description = "AI models with adaptive memory management and strategic forgetting, inspired by Greek mythology and neuroscience."
readme = "README.md"
requires-python = ">=3.10, <3.14"
license = {file = "LICENSE"}
authors = [
    {name = "RetentionLabs", email = "retentionlabs.ai@gmail.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "transformers",
]
[project.optional-dependencies]
dev = [
    "libcst>=1.8.4",
    "ruff>=0.13.0"
]
torch = [
    "torch"
]
torch-cu128 = [
    "torch"
]

[project.urls]
"Homepage" = "https://github.com/retentionlabs/theRiverLethe"
"Bug Tracker" = "https://github.com/retentionlabs/theRiverLethe/issues"
"Documentation" = "https://retentionlabs.github.io/"

[tool.flit.module]
name = "thelethe"

[tool.uv.sources]
torch = [
    { index = "torch-cu128" }
]
transformers = { git = "https://github.com/retentionlabs/transformers-ttt", rev = "add-ttt" }

[[tool.uv.index]]
name = "torch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
